--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   background-color: var(--main-theme);
   display: flex;
   flex-direction: column;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /* navigation */
@@ -23,6 +24,7 @@ body {
   height: 1.5rem;
   background-color: var(--secondary-theme);
   color: white;
+  border: none;
 }
 .nav-items {
   display: none;
@@ -68,13 +70,15 @@ h1 {
   font-size: 10rem;
 }
 
-/* main-weather */
-.weather-section {
-  background-color: red;
-}
 /* main-info */
 .info-section {
-  background-color: var(--info-theme);
+  background-color: var(--main-theme);
+  margin-top: 3rem;
+}
+.info-section-title {
+  color: white;
+  text-align: center;
+  padding: 1rem;
 }
 
 .info-section-img {
@@ -101,6 +105,25 @@ h1 {
   padding: 10px;
   background: white;
   border-radius: 5px;
+}
+/* main-weather */
+.weather-section {
+  background-color: var(--main-theme);
+  color: white;
+  text-align: center;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
+}
+
+.weather-input {
+  height: 2rem;
+  margin: 2rem 0 2rem 2rem;
+  border-radius: 1rem;
+}
+.weather-input-btn {
+  height: 2rem;
+  border-radius: 1rem;
+  width: 2rem;
 }
 
 /* main-club */
