--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 
 :root {
   --main-theme: rgba(14, 43, 14, 0.996);
-  --secondary-theme: rgb(64, 23, 64);
-  --info-theme: rgba(55, 134, 55, 0.996);
+  --secondary-theme: rgb(60, 60, 140);
+  --nav-hover: rgb(255, 203, 107);
 }
 
 body {
@@ -28,9 +28,11 @@ body {
 }
 .nav-items {
   display: none;
+  list-style: none;
 }
 .nav-icon {
   margin-left: 15px;
+
   color: orange;
 }
 
@@ -74,6 +76,7 @@ h1 {
 .info-section {
   background-color: var(--main-theme);
   margin-top: 3rem;
+  padding: 5px;
 }
 .info-section-title {
   color: white;
@@ -108,11 +111,15 @@ h1 {
 }
 /* main-weather */
 .weather-section {
-  background-color: var(--main-theme);
   color: white;
   text-align: center;
   margin-bottom: 1rem;
   margin-top: 2rem;
+  padding: 1rem;
+}
+.weather-section h1 {
+  margin-bottom: 2rem;
+  color: white;
 }
 
 .weather-input {
@@ -124,11 +131,64 @@ h1 {
   height: 2rem;
   border-radius: 1rem;
   width: 2rem;
+  color: var(--main-theme);
+  background-color: var(--nav-hover);
 }
 
 /* main-club */
 .club-section {
-  background-color: yellow;
+  background-color: var(--secondary-theme);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 10px;
+}
+.club-section h1 {
+  color: white;
+  margin-bottom: 2rem;
+}
+.club-section p {
+  color: white;
+  margin-bottom: 2rem;
+}
+.form {
+  color: white;
+  padding: 2rem;
+
+  display: block;
+  border: 2px solid white;
+  border-radius: 15px;
+  transition: 1s border ease-in;
+}
+.form label {
+  display: block;
+}
+.form div {
+  margin-bottom: 1rem;
+}
+.display-error {
+  color: red;
+  font-weight: 600;
+}
+.form-submit-btn {
+  margin-top: 1rem;
+  height: 2rem;
+  border-radius: 1rem;
+  width: 2rem;
+  color: var(--main-theme);
+  background-color: var(--nav-hover);
+}
+.form-error {
+  border: 4px solid red;
+}
+
+/* footer */
+.footer {
+  height: 2rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
 }
 
 @media screen and (min-width: 800px) {
@@ -174,7 +234,7 @@ h1 {
     margin-bottom: 8rem;
   }
   .nav-icon:hover {
-    color: rgb(255, 203, 107);
+    color: var(--nav-hover);
   }
   .nav:hover {
     width: 12rem;
@@ -183,7 +243,7 @@ h1 {
     display: flex;
   }
   .nav:hover .logo {
-    color: rgb(255, 203, 107);
+    color: var(--nav-hover);
     transform: rotateY(180deg);
   }
   .hamburger-menu {
