--- a/style.css
+++ b/style.css
@@ -184,11 +184,13 @@ h1 {
 
 /* footer */
 .footer {
+  margin-top: 1rem;
   height: 2rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
   color: white;
+  background-color: grey;
 }
 
 @media screen and (min-width: 800px) {
@@ -325,5 +327,3 @@ h1 {
     background-color: var(--nav-hover);
   }
 }
-
-/* footer */
